--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#testContentRed {
+  background-color: red;
+}
+
+#testContentBlue {
+  background-color: blue;
+}
