--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,30 @@ code {
   background-color: #3386df;
   color: white;
 }
+
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translate(0, 0);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0);
+  }
+}
+
+.marquee {
+  background-color: #3386df;
+  width: 100%;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.marquee .content {
+  display: inline-block;
+  padding-left: 100%;
+  -webkit-animation: scroll 5s infinite linear;
+}
+
+.marquee .content img {
+  padding: 0 100px 0 0;
+}
