--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -24,6 +24,14 @@
   line-height: 28px;
 }
 
+.secondary_font_regular {
+  font-family: "roboto_regular";
+  font-style: medium;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+}
+
 .top_row {
   margin: 130px 0 150px 0;
 }
