--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -58,13 +58,43 @@
 }
 
 .byTheNumbersObject {
-  /* justify-content: center; */
   align-content: center;
-  margin: 0 20px 0 20px;
+  justify-content: center;
+}
+
+.byTheNumbersObjectContent {
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  /* margin: 0 20px 0 20px; */
 }
 
 .aboutPageWhoWeAreImage {
-  background-color: blue;
+  background-color: green;
   max-width: 100px;
   max-height: auto;
+}
+
+.aboutByTheNumbers {
+  margin-bottom: 150px;
+  justify-content: center;
+}
+
+.byTheNumbersObjectContainer {
+  background-color: #ebf9ff;
+  height: 150px;
+  padding-bottom: 150px;
+  padding-top: 50px;
+}
+
+.aboutPageNumbersObjectSubtitle {
+  margin: 0 20px 0 20px;
+}
+
+.byTheNumbersObject:nth-child(odd) {
+  margin-bottom: 50px;
+}
+
+.byTheNumbersObject:nth-child(even) {
+  margin-top: 50px;
 }
