--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -40,18 +40,22 @@
   line-height: 28px;
 }
 
+.aboutPage {
+  max-width: 100% !important;
+}
+
 .aboutPageHeaderText {
   margin-right: 100px;
 }
 
 .aboutPageHeaderTitle {
-  background-color: red;
   margin-bottom: 20px;
 }
 
 .aboutPageTitle {
   margin-bottom: 175px;
   margin-top: 100px;
+  align-content: center;
 }
 
 .byTheNumbersTitle {
@@ -121,7 +125,7 @@
   margin-top: 50px;
 }
 
-.aboutPageLeadershipTitle {
+.contentTitle {
   justify-content: center;
   margin-bottom: 75px;
 }
@@ -145,4 +149,37 @@
   align-content: center;
   justify-content: center;
   text-align: center;
+}
+
+.partnersTitle {
+  padding: 0 550px 0 550px;
+  text-align: center;
+  background-color: #ebf9ff;
+}
+
+.aboutPagePartnersImage {
+  max-width: 300px;
+  max-height: auto;
+}
+
+.aboutPartners {
+  margin-bottom: 50px;
+  justify-content: center;
+  background-color: #ebf9ff;
+}
+
+.partners {
+  background-color: #ebf9ff;
+  max-width: 100% !important;
+  padding-top: 50px;
+  margin-bottom: 150px;
+}
+
+.counselorObject {
+  padding: 0 100px 0 100px;
+  background-color: #ebf9ff;
+}
+
+.test {
+  /* margin: 0 100px 0 100px; */
 }
