--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -61,4 +61,19 @@
 }
 
 .sub_footer_quote {
+  color: white;
+}
+
+.subFooterPage {
+  background-color: #1886df;
+  justify-content: center;
+  height: 420px;
+  margin-bottom: 220px;
+  align-items: center;
+  display: flex;
+}
+
+.test {
+  align-items: center;
+  display: flex;
 }
