setting up footer/header icon

--- a/src/layout/Layout/Layout.css
+++ b/src/layout/Layout/Layout.css
@@ -5,6 +5,19 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "domainedisplay_regular";
+  src: url("./DomaineDispNar-Regular.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.logo-text {
+  font-family: "domainedisplay_regular", Arial, Helvetica, sans-serif;
+  padding-left: 10px;
+  /* font-weight: bold; */
+}
+
 .header {
   background-color: white;
 }
@@ -29,4 +42,8 @@
 
 .footer-background {
   background-color: #ebf9ff;
+}
+
+.footer {
+  padding: 50px 0 30px 0 !important;
 }
