--- a/src/index.css
+++ b/src/index.css
@@ -33,12 +33,15 @@ code {
 }
 
 .orb {
-  border-radius: 50px;
   display: inline-block;
   margin: 0 20px;
   /* margin: 0 24.7px; */
   float: left;
   transition: all 0.2s ease-out;
+  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 .orb:hover {
@@ -49,8 +52,8 @@ code {
 
 .marquee {
   /* background-color: red; */
-  height: 300px;
-  width: 1300px;
+  height: 400px;
+  width: 1500px;
   /* border: 2px solid #eee; */
   overflow: hidden;
   position: relative;
@@ -62,7 +65,7 @@ code {
   display: flex;
   align-content: center;
   align-items: center;
-  width: 300%;
+  width: 400%;
   position: absolute;
   animation: marquee 5s linear infinite;
 }
@@ -71,10 +74,10 @@ code {
   animation-play-state: paused;
 }
 
-.contentSpan {
+/* .contentSpan {
   float: left;
   width: 50%;
-}
+} */
 
 .orb:nth-child(odd) {
   margin-top: 50px;
@@ -84,7 +87,7 @@ code {
   margin-bottom: 50px;
 }
 
-.marquee::after {
+/* .marquee::after {
   content: "";
   display: block;
   position: absolute;
@@ -98,7 +101,7 @@ code {
   height: 410px;
   width: 100%;
   pointer-events: none;
-}
+} */
 
 @keyframes marquee {
   0% {
