--- a/src/pages/privacyAndSecurity/privacyAndSecurity.css
+++ b/src/pages/privacyAndSecurity/privacyAndSecurity.css
@@ -10,3 +10,19 @@
 .title_top {
   margin-top: 50px;
 }
+
+.four_oh_four_content {
+  display: flex;
+  justify-content: center;
+}
+
+.submit_button {
+  background-color: #1886df;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  margin-top: 30px;
+  width: 166px;
+  height: 55px;
+  font-size: 20px;
+}
