--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -25,6 +25,8 @@
 .top_row {
   margin: 0 0 150px 0;
   padding: 0 0 0 150px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .top_row_left_col {
