--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -25,8 +25,6 @@
 .top_row {
   margin: 0 0 150px 0;
   padding: 0 0 0 150px;
-  display: flex;
-  justify-content: space-between;
 }
 
 .top_row_left_col {
@@ -169,6 +167,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  margin-left: 30%;
 }
 
 .homePartnerImages {
