--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -114,11 +114,11 @@
 }
 
 .homePageFeaturesRightSideTextObject {
-  margin: 0 600px 0 0;
+  margin: 0 20% 0 20%;
 }
 
 .homePageFeaturesLeftSideTextObject {
-  margin: 0 0 0 600px;
+  margin: 0 20% 0 20%;
 }
 
 .homePageFeaturesImageBackground {
