--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -1,5 +1,6 @@
 .primary_font {
   font-family: "domainedisplay_regular", Arial, Helvetica, sans-serif;
+  font-size: 42px;
 }
 
 .secondary_font {
@@ -54,7 +55,7 @@
 .subFooterPage {
   background-color: #1886df;
   justify-content: center;
-  height: 420px;
+  height: 20em;
   margin-bottom: 220px;
   align-items: center;
   display: flex;
@@ -72,4 +73,9 @@
 
 .researchBottomRow {
   margin-bottom: 250px;
+}
+
+.subFooterPageImg {
+  max-width: 50%;
+  max-height: auto;
 }
