--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* padding-top: 60px;
-  padding-bottom: 60px; */
 }
 
 .primary_font {
@@ -43,21 +41,13 @@ body {
   font-family: "roboto_regular";
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 1em;
   line-height: 28px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-#testContentRed {
-  background-color: red;
-}
-
-#testContentBlue {
-  background-color: blue;
 }
 
 .footerListGroupItem {
@@ -72,7 +62,6 @@ code {
 .orb {
   display: inline-block;
   margin: 0 20px;
-  /* margin: 0 24.7px; */
   float: left;
   transition: all 0.2s ease-out;
   padding-bottom: 100px;
