--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
 
 .primary_font {
   font-family: "domainedisplay_regular", Arial, Helvetica, sans-serif;
+  color: #2b1f30;
 }
 
 .form_title {
@@ -43,6 +44,7 @@ body {
   font-weight: normal;
   font-size: 1em;
   line-height: 28px;
+  color: #2b1f30;
 }
 
 code {
