--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -23,21 +23,16 @@
 }
 
 .top_row {
+  display: flex;
+  justify-content: space-around;
   margin: 0 0 150px 0;
-  padding: 0 0 0 150px;
+  border: solid red 2px;
 }
 
 .top_row_left_col {
   display: flex;
   max-width: 30em;
   align-items: flex-end;
-}
-
-.homePageHeaderTitle {
-  font-size: 60px;
-  line-height: 62px;
-  color: #2b1f30;
-  max-width: 400px;
 }
 
 .homePageHeaderBlurb {
@@ -49,9 +44,8 @@
   max-width: 400px;
 }
 
-.homePageHeaderEmailFormText {
-  font-size: 22px;
-  line-height: 24px;
+.email-form-text {
+  font-size: 1em !important;
   color: #958f97 !important;
 }
 
@@ -60,17 +54,16 @@
   box-shadow: none;
 }
 
+.email-form {
+  border-bottom: 4px solid #f4f4f5;
+  width: 1000px;
+}
+
 .homePageHeaderEmailFormText:hover {
-  font-size: 22px;
-  line-height: 24px;
   color: #2b1f30 !important;
 }
 
-.homePageHeaderEmailForm {
-  border-bottom: 4px solid #f4f4f5;
-}
-
-.homePageHeaderEmailForm:hover {
+.email-form:hover {
   border-bottom: 4px solid #1981d6;
   align-content: space-between;
 }
@@ -166,7 +159,6 @@
 .homePageVideoCaseStudyVideoEmbed {
   justify-content: center;
   margin-bottom: 150px;
-  /* background: linear-gradient(#1886df 50%, white 50%); */
 }
 
 .homePagePoweredByOurPartnersTitle {
@@ -180,7 +172,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  margin-left: 30%;
+  /* margin-left: 30%; */
 }
 
 .homePartnerImages {
@@ -207,16 +199,15 @@
   height: auto;
 }
 
-.homePageButton {
-  font-size: 22px;
+.get-a-demo-button {
+  font-size: 1.1em !important;
   background: none;
-  color: #757575;
+  color: #757575 !important;
   border: none;
   padding: 0;
   cursor: pointer;
   outline: inherit;
   margin-top: 10px;
-  padding-bottom: 25px;
 }
 
 .homeFeatureLink {
@@ -225,4 +216,8 @@
 
 .homeFeatureLink:hover {
   text-decoration: none;
+}
+
+.test {
+  min-width: 110%;
 }
