--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,6 +1,6 @@
 .primary_font {
   font-family: "domainedisplay_regular", Arial, Helvetica, sans-serif;
-  font-size: 2em;
+  /* font-size: 2em; */
 }
 
 .secondary_font {
