--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -1,6 +1,6 @@
 .primary_font {
   font-family: "domainedisplay_regular", Arial, Helvetica, sans-serif;
-  font-size: 42px;
+  /* font-size: 42px; */
 }
 
 .secondary_font {
