--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -76,6 +76,14 @@
 }
 
 .subFooterPageImg {
-  max-width: 50%;
-  max-height: auto;
+  max-width: auto;
+  max-height: 80%;
+}
+
+.white_font {
+  color: white !important;
+}
+.subFooterPageImgContainer {
+  display: flex;
+  align-items: center;
 }
