--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -183,9 +183,33 @@
 }
 
 .homePageImg {
+  position: relative;
   display: flex;
   width: 33em;
   height: auto;
+  z-index: 3;
+}
+
+.stroke-10 {
+  position: absolute;
+  z-index: 2;
+  margin-top: -100px;
+  margin-left: -50px;
+}
+
+.video {
+  position: relative;
+  display: flex;
+  width: 33em;
+  height: auto;
+  z-index: 3;
+}
+
+.oval {
+  position: absolute;
+  z-index: 2;
+  margin-top: -50px;
+  margin-left: -50px;
 }
 
 .get-a-demo-button {
