--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -205,12 +205,19 @@
   z-index: 3;
 }
 
-.oval {
+/* .oval {
   position: absolute;
   z-index: 2;
   margin-top: -50px;
   margin-left: -50px;
 }
+
+.line {
+  position: absolute;
+  z-index: 2;
+  margin-top: -100px;
+  margin-left: 800px;
+} */
 
 .get-a-demo-button {
   font-size: 1.1em !important;
