--- a/src/pages/getADemo/GetADemo.css
+++ b/src/pages/getADemo/GetADemo.css
@@ -1,6 +1,6 @@
 .demo_form_container {
   border: solid #1886df 2px;
-  margin: 0 20% 10% 20%;
+  margin: 0 0 10% 0;
   padding: 5%;
   display: flex;
   justify-content: center;
