--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -28,10 +28,26 @@
   margin: 0 0 150px 0;
 }
 
+.mobile_top_row {
+  display: flex;
+  justify-content: center;
+  margin: 30px 0 30px 0;
+}
+
 .top_row_left_col {
   display: flex;
   align-items: flex-end;
   margin: 0 100px;
+}
+
+.mobile_top_row_left_col {
+  display: flex;
+  align-items: flex-end;
+  margin: 0 100px;
+}
+
+.mobile_top_row_header {
+  text-align: center;
 }
 
 .homePageHeaderBlurb {
@@ -46,6 +62,11 @@
 .no-border {
   border: 0;
   box-shadow: none;
+}
+
+.mobile-email-form-container {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .email-form {
@@ -101,7 +122,20 @@
   padding: 100px 0 100px 0;
 }
 
+.mobile-homePageFeaturesImage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0 10px 0;
+}
+
 .homePageFeaturesText {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mobile-homePageFeaturesText {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,6 +143,22 @@
 
 .homePageFeaturesRightSideTextObject {
   margin: 0 20% 0 20%;
+}
+
+.mobile-homePageFeaturesRightSideTextObject {
+  padding: 0 0 0 35px;
+  max-width: 350px;
+  display: flex;
+  justify-content: center;
+}
+
+.mobile_feature_title {
+}
+
+.mobile-test {
+  display: flex;
+  justify-content: center;
+  border: solid red 2px;
 }
 
 .homePageFeaturesLeftSideTextObject {
@@ -132,6 +182,12 @@
 .featureRows {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 125px;
+}
+
+.mobile-featureRows {
+  display: flex;
+  justify-content: center;
   margin-bottom: 125px;
 }
 
@@ -180,6 +236,18 @@
   display: flex;
   justify-content: center;
   margin-bottom: 100px;
+}
+
+.mobile-homePageImg {
+  position: relative;
+  display: flex;
+  width: 70%;
+  height: auto;
+  z-index: 3;
+}
+
+.mobile-homePageImg-row {
+  margin: 0 30px;
 }
 
 .homePageImg {
