--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -197,6 +197,13 @@
   margin-bottom: 50px;
   padding: 100px 150px 0px 150px;
 }
+
+.mobile-homePageVideoCaseStudyTitle {
+  text-align: center;
+  justify-content: center;
+  padding: 10px;
+}
+
 .homePageVideoCaseStudy {
   background: linear-gradient(#1886df 50%, white 50%);
   min-width: 100%;
@@ -205,6 +212,10 @@
 .homePageVideoCaseStudyVideoEmbed {
   justify-content: center;
   margin-bottom: 150px;
+}
+
+.mobile-homePageVideoCaseStudyVideoEmbed {
+  justify-content: center;
 }
 
 .homePagePoweredByOurPartnersTitle {
@@ -228,6 +239,27 @@
   margin-bottom: 150px;
 }
 
+.mobile-homePartnerImagesContainer {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  height: 100px;
+  width: auto;
+}
+
+.mobile-homePartnerImages {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  height: auto;
+  width: 70%;
+  margin-bottom: 30px;
+}
+
+.mobile-imageObjectCol {
+  justify-content: center;
+}
+
 .imageObjectRow {
   padding: 0 10%;
 }
@@ -236,6 +268,15 @@
   display: flex;
   justify-content: center;
   margin-bottom: 100px;
+}
+
+.mobile-imageObjectTitle {
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.mobile-imageObjectTitleText {
+  text-align: center;
 }
 
 .mobile-homePageImg {
