getting the mobile home page working

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -209,6 +209,11 @@
   min-width: 100%;
 }
 
+.mobile-homePageVideoCaseStudy {
+  background: linear-gradient(#1886df 50%, white 50%);
+  min-width: 100%;
+}
+
 .homePageVideoCaseStudyVideoEmbed {
   justify-content: center;
   margin-bottom: 150px;
