--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -74,7 +74,7 @@
 }
 
 .email-form:hover {
-  border-bottom: 4px solid #1981d6;
+  /* border-bottom: 4px solid #1981d6; */
   cursor: pointer;
 }
 
@@ -130,6 +130,10 @@
   justify-content: center;
   align-items: center;
   padding: 10px 0 10px 0;
+}
+
+.mobile-home-page-video-case-study-title {
+  padding: 0 20px;
 }
 
 .homePageFeaturesText {
